--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,9 +8,10 @@ langgraph==0.5.3
 langchain-community==0.3.27
 chromadb==0.4.24
 sse-starlette==1.6.1
-aiohttp==3.10.11
+aiohttp==3.12.14
 pydantic-settings==2.10.1
 starlette==0.40.0
 
 # Persistent checkpoint backend
 langgraph-checkpoint-sqlite>=1.0.3
+setuptools>=78.1.1
